# PMTB

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  config.yaml  docker-compose.yml  pyproject.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
migrations/: env.py
migrations/versions/: 003_add_trading_state.py  004_add_is_paper_column.py  005_add_loss_analysis_backtest_run.py  f63a30b29f5b_initial_schema.py
secrets/: README.txt
src/pmtb/: config.py  executor.py  fill_tracker.py  logging_.py  main.py  metrics.py  orchestrator.py  order_repo.py  paper.py  reconciler.py
src/pmtb/db/: engine.py  models.py  (+1 more)
tests/: conftest.py  test_config.py  test_fill_tracker.py  test_orchestrator.py  test_order_repo.py  test_paper.py  test_reconciler.py
tests/db/: test_migrations.py  test_session.py
tests/decision/: __init__.py  test_edge.py  test_pipeline.py  test_risk.py  test_sizer.py  test_tracker.py  test_watchdog.py
tests/kalshi/: test_auth.py  test_client.py  test_retry.py  test_ws_reconnect.py
tests/performance/: test_backtester.py  test_learning_loop.py  test_loss_classifier.py  test_metrics.py  test_models.py
tests/prediction/: test_combiner.py  test_confidence.py  test_features.py  test_llm_predictor.py  test_models.py  test_pipeline.py  test_xgboost_model.py
tests/research/: test_agents.py  test_models.py  test_pipeline.py  test_query.py  test_sentiment.py
tests/scanner/: test_filters.py  test_models.py  test_scanner.py
(+111 files in other folders)
